--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -270,45 +270,65 @@
 					</div>
 				</div>
 
+				<h2 class="text">
+					Время прочтения
+				</h2>
+
 				<div class="filter__time">
-					<h2 class="text">
-						Время прочтения
-					</h2>
+
 
 					<div class="filter__time-scrol">
+						<button class="button_form_none header__button-bottom header__button_type_search filter__circle-left"
+							type="button">
+							<svg class="header__svg" width="25" height="26" aria-hidden="true" focusable="false">
+								<use href="assets/images/svg/sprite.svg#circle"></use>
+							</svg>
+						</button>
 
+
+						<div class="filter__clock">
+							<span class="span1"> 1m </span>
+							<span class="span1 span2"> 3m </span>
+							<span class="span1 span3"> 5m </span>
+						</div>
+						<span class="span1 span4"> 10m </span>
+						<span class="span1 span5"> 15m </span>
+						<span class="span1 span6"> 20m </span>
+						<span class="span1 span7"> ∞ </span>
 					</div>
+
+					<button class="button_form_none header__button-bottom header__button_type_search filter__circle-rights"
+						type="button">
+						<svg class="header__svg" width="25" height="26" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#circle"></use>
+						</svg>
+					</button>
 				</div>
 			</div>
 		</div>
-
-
 	</article>
 
 	<div class="filter__bottom">
+		<div class="filter__button-wrap">
+			<button class="button_form_none filter__bottom-deck" type="button">
+				<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#deck"></use>
+				</svg>
+			</button>
 
-		<button class="button_form_none  header__button-deck " type="button">
-			<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
-				<use href="assets/images/svg/sprite.svg#deck"></use>
-			</svg>
-		</button>
-
-		<button class="button_form_none header__button-bottom header__button_type_menu" type="button">
-			<svg class="header__svg" width="22" height="18" aria-hidden="true" focusable="false">
-				<use href="assets/images/svg/sprite.svg#menu"></use>
-			</svg>
-			Меню
-		</button>
-
+			<button class="button_form_none filter__button-menu" type="button">
+				<svg class="header__svg" width="19" height="18" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#menuFilter"></use>
+				</svg>
+			</button>
+		</div>
 		<button class="button_form_none header__button-bottom header__button_type_menu" type="button">
 			Применить
 		</button>
 
-		<button class="button_form_none header__button-bottom header__button_type_menu" type="button">
+		<button class="button_form_none filter__button-clear" type="button">
 			Очистить
 		</button>
-
-
 	</div>
 
 	<section class="education container education-2">
