--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -248,6 +248,45 @@
 					<a class="button filter__button-link" href="">
 						Еще+12
 					</a>
+
+					<div class="filter__all-desktop">
+						<a class="button filter__button-link" href="">
+							Технологии ✓
+						</a>
+						<a class="button filter__button-link" href="">
+							Технический анализ +
+						</a>
+						<a class="button filter__button-link" href="">
+							Криптография +
+						</a>
+						<a class="button filter__button-link" href="">
+							Экономика +
+						</a>
+						<a class="button filter__button-link" href="">
+							Торговля ✓
+						</a>
+						<a class="button filter__button-link" href="">
+							Ethereum +
+						</a>
+						<a class="button filter__button-link" href="">
+							Приватность +
+						</a>
+						<a class="button filter__button-link" href="">
+							Майнинг +
+						</a>
+						<a class="button filter__button-link" href="">
+							Metaverse +
+						</a>
+						<a class="button filter__button-link" href="">
+							История +
+						</a>
+						<a class="button filter__button-link" href="">
+							Консенсус +
+						</a>
+						<a class="button filter__button-link" href="">
+							Основы +
+						</a>
+					</div>
 				</div>
 			</div>
 
@@ -309,8 +348,12 @@
 	</article>
 
 	<div class="filter__bottom">
+		<div class="filter__bottom-inner container">
 		<div class="filter__button-wrap">
-			<button class="button_form_none filter__bottom-deck" type="button">
+			<button class="button_form_none filter__bottom-deck filter__bottom-button" type="button">
+				<span class="filter__menu-span filter__button-none">
+					Сортировка
+				</span>
 				<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#deck"></use>
 				</svg>
@@ -322,13 +365,19 @@
 				</svg>
 			</button>
 		</div>
-		<button class="button_form_none header__button-bottom header__button_type_menu" type="button">
+
+		<button class="button_form_none filter__bottom-button" type="button">
 			Применить
 		</button>
 
-		<button class="button_form_none filter__button-clear" type="button">
+		<button class="button_form_none filter__button-clear filter__bottom-button" type="button">
 			Очистить
 		</button>
+
+		<button class="button_form_none filter__bottom-button filter__button-none" type="button">
+			Скрыть фильтр
+		</button>
+		</div>
 	</div>
 
 	<section class="education container education-2">
