header styles hover decktop start

--- a/source/markup/header.html
+++ b/source/markup/header.html
@@ -15,18 +15,177 @@
 		<div class="header__menu-wrap">
 			<div class="header__menu-top">
 				<div class="header__user-wrap">
-					<button class="button_form_none  header__button-deck " type="button">
+
+
+					<button class="button button_form_none  header__button-deck header__button-deck--hover" type="button">
 						<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
 							<use href="assets/images/svg/sprite.svg#deck"></use>
 						</svg>
+
+						<nav class="header-nav__menu">
+							<ul class="menu header-nav">
+								<li class="header-nav__item header-nav__item--bnb">
+									<a class="header-nav__link" href="">
+										Обмен
+										<span class="header-nav__text">
+											Блокчейн и обмен криптоактивами
+										</span>
+									</a>
+								</li>
+
+								<li class="header-nav__item header-nav__item--laba">
+									<a class="header-nav__link" href="">
+										Лаборатория
+										<span class="header-nav__text">
+											Инкубатор для топовых блокчейн-проектов
+										</span>
+									</a>
+								</li>
+
+								<li class="header-nav__item header-nav__item--study">
+									<a class="header-nav__link" href="">
+										Исследование
+										<span class="header-nav__text">
+											Анализ и отчеты на институциональном уровне
+										</span>
+									</a>
+								</li>
+
+								<li class="header-nav__item header-nav__item--bcf">
+									<a class="header-nav__link" href="">
+										BCF
+										<span class="header-nav__text">
+											Благотворительный фонд Blockchain
+										</span>
+									</a>
+								</li>
+
+								<li class="header-nav__item header-nav__item--rocket">
+									<a class="header-nav__link" href="">
+										Панель запуска
+										<span class="header-nav__text">
+											Платформа для запуска токенов
+										</span>
+									</a>
+								</li>
+
+								<li class="header-nav__item header-nav__item--shield">
+									<a class="header-nav__link" href="">
+										Доверительный кошелек
+										<span class="header-nav__text">
+											Официальный криптокошелек Binances
+										</span>
+									</a>
+								</li>
+							</ul>
+						</nav>
 					</button>
 
-					<button class="button_form_none header__button-learn" type="button">
+					<button class="button_form_none header__button-learn header__button-learn--hover" type="button">
 						Узнать
+
+						<nav class="header-nav__menu">
+							<ul class="menu header-nav header-nav_size_smal">
+								<li class="header-nav__item header-nav__item--glossary">
+									<a class="header-nav__link" href="">
+										Глоссарий
+										<span class="header-nav__text">
+											Глоссарий криптотерминов
+										</span>
+									</a>
+								</li>
+
+								<li class="header-nav__item header-nav__item--game">
+									<a class="header-nav__link" href="">
+										Викторина
+										<span class="header-nav__text">
+											Проходите игровые тесты
+										</span>
+									</a>
+								</li>
+							</ul>
+						</nav>
 					</button>
 
-					<button class="button_form_none header__button-nav " type="button">
+					<button class="button_form_none header__button-nav header__button-nav--hover" type="button">
 						Темы
+
+						<nav class="header-nav__menu">
+							<ul class="menu header-nav header-nav_size_smal">
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										Altcoin
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										Binance
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										Основы
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										Глоссарий
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										Майнинг
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										Блокчейн
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										Экономика
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										DeFi
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										История
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										Руководство
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										Биткоин
+									</a>
+								</li>
+
+								<li class="header-nav__item-button ">
+									<a class="button header-nav__link-button button_color_active" href="">
+										Еще
+									</a>
+								</li>
+
+							</ul>
+						</nav>
 					</button>
 				</div>
 
@@ -161,7 +320,7 @@
 					<use href="assets/images/svg/sprite.svg#search"></use>
 				</svg>
 
-					Поиск
+				Поиск
 
 			</button>
 
