header search end

--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -26,6 +26,8 @@
 
 			<button class="button_form_none header__button-leng header-mobile__leng" type="button">
 				RU
+
+				
 			</button>
 		</div>
 	</header>
@@ -314,8 +316,6 @@
 				</h2>
 
 				<div class="filter__time">
-
-
 					<div class="filter__time-scrol">
 						<button class="button_form_none header__button-bottom header__button_type_search filter__circle-left"
 							type="button">
@@ -326,14 +326,14 @@
 
 
 						<div class="filter__clock">
-							<span class="span1"> 1m </span>
-							<span class="span1 span2"> 3m </span>
-							<span class="span1 span3"> 5m </span>
+							<span class="filter__clockfilter__clockspan1"> 1m </span>
+							<span class="filter__clock--span1 filter__clock--span2"> 3m </span>
+							<span class="filter__clock--span1 filter__clock--span3"> 5m </span>
 						</div>
-						<span class="span1 span4"> 10m </span>
-						<span class="span1 span5"> 15m </span>
-						<span class="span1 span6"> 20m </span>
-						<span class="span1 span7"> ∞ </span>
+						<span class="filter__clock--span1 filter__clock--span4"> 10m </span>
+						<span class="filter__clock--span1 filter__clock--span5"> 15m </span>
+						<span class="filter__clock--span1 filter__clock--span6"> 20m </span>
+						<span class="filter__clock--span1 sfilter__clock--pan7"> ∞ </span>
 					</div>
 
 					<button class="button_form_none header__button-bottom header__button_type_search filter__circle-rights"
