--- a/source/markup/header.html
+++ b/source/markup/header.html
@@ -209,17 +209,118 @@
 					</button>
 
 
-					<button class="button_form_none header__button-leng" type="button">
+					<button class="button_form_none header__button-leng header__button-lang--hover" type="button">
 						RU
+
+						<nav class="header-nav__menu">
+							<ul class="menu header-nav header-nav_size_smal header-nav_size--lang">
+								<li class="header-nav__item-button">
+									<a class="button header-lang__link-button" href="">
+										English
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-lang__link-button" href="">
+										Polski
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button  header-lang__link-button" href="">
+										繁體中文
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button  header-lang__link-button" href="">
+										العربية
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button  header-lang__link-button" href="">
+										Русский
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button  header-lang__link-button" href="">
+										Türkçe
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button  header-lang__link-button" href="">
+										Português
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-lang__link-button" href="">
+										Svenska
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-lang__link-button" href="">
+										Bahasa Indonesia
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-lang__link-button" href="">
+										日本語
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-lang__link-button" href="">
+										Filipino
+									</a>
+								</li>
+
+								<li class="header-nav__item-button ">
+									<a class="button header-lang__link-button" href="">
+										Українська мова
+									</a>
+								</li>
+
+								<li class="header-nav__item-button ">
+									<a class="button header-lang__link-button" href="">
+										Čeština
+									</a>
+								</li>
+								<li class="header-nav__item-button ">
+									<a class="button header-lang__link-button" href="">
+										Български
+									</a>
+								</li>
+								<li class="header-nav__item-button ">
+									<a class="button header-lang__link-button" href="">
+										اردو
+									</a>
+								</li>
+								<li class="header-nav__item-button ">
+									<a class="button header-lang__link-button" href="">
+										latviešu valoda
+									</a>
+								</li>
+
+							</ul>
+						</nav>
 					</button>
 
+					<div class="middle">
+						<form action="" class="search-box" method="post">
+							<input type="text" class="input" name="" value="">
+							<button type="button" class="btn" name="button"></button>
+						</form>
+					</div>
 
-					<button class="button_form_none header__button-sedes" type="button">
-						<svg class="header__svg" width="13" height="14" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#sedes"></use>
-						</svg>
-					</button>
 				</div>
+
+
 
 				<button class="button button_color_yellow header__aut">
 					Авторизация
@@ -308,19 +409,12 @@
 				Главная
 			</button>
 
-			<button
-				class="user-nav__wrap user-nav__noactive button_form_none header__button-bottom header__button_type_search"
-				type="button">
-
-				<form class="user-nav__form">
-					<input class="input user-nav__input user-nav__noactive" type="text" placeholder="Найти" />
-				</form>
-
-				<svg class="user-nav__search header__svg" width="18" height="18" aria-hidden="true" focusable="false">
-					<use href="assets/images/svg/sprite.svg#search"></use>
-				</svg>
-
-				Поиск
+			<button class="button_form_none middle middle_media_mobile" type="button">
+						<form action="" class="search-box" method="post">
+							<input type="text" class="input input_media_mobile" name="text" value="" id="search">
+						<label class="form__label" for="search">Ваше имя</label>
+							<button type="button" class="btn btn_media_mobile" name="button"></button>
+						</form>
 
 			</button>
 
@@ -339,7 +433,7 @@
 			</button>
 		</nav>
 	</header>
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="assets/scripts/index.js"></script>
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </body>
