search btn mobile fix

--- a/source/markup/header.html
+++ b/source/markup/header.html
@@ -412,7 +412,7 @@
 			<button class="button_form_none middle middle_media_mobile" type="button">
 						<form action="" class="search-box" method="post">
 							<input type="text" class="input input_media_mobile" name="text" value="" id="search">
-						<label class="form__label" for="search">Ваше имя</label>
+						<label class="middle__label middle__label_media_mobile" for="search">Ваше имя</label>
 							<button type="button" class="btn btn_media_mobile" name="button"></button>
 						</form>
 
