--- a/source/markup/header.html
+++ b/source/markup/header.html
@@ -203,9 +203,14 @@
 
 
 					<button class="button_form_none header__button-acc" type="button">
-						<svg class="header__svg" width="25" height="25" aria-hidden="true" focusable="false">
+						<svg class="header__svg header__svg-login" width="25" height="25" aria-hidden="true" focusable="false">
 							<use href="assets/images/svg/sprite.svg#acc"></use>
 						</svg>
+
+						<div class="header__button-login">
+							<img class="header__button-img" src="assets/images/header/account.png" alt="автврка пользователя">
+							<span class="header__button-name">[Vip]</span>
+						</div>
 					</button>
 
 
@@ -410,11 +415,11 @@
 			</button>
 
 			<button class="button_form_none middle middle_media_mobile" type="button">
-						<form action="" class="search-box" method="post">
-							<input type="text" class="input input_media_mobile" name="text" value="" id="search">
-						<label class="middle__label middle__label_media_mobile" for="search">Ваше имя</label>
-							<button type="button" class="btn btn_media_mobile" name="button"></button>
-						</form>
+				<form action="" class="search-box search-box_media_mobile" method="post">
+					<input type="text" class="input input_media_mobile" name="text" value="" id="search">
+					<label class="middle__label middle__label_media_mobile" for="search">Поиск</label>
+					<button type="button" class="btn btn_media_mobile" name="button"></button>
+				</form>
 
 			</button>
 
